<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80e1d7bc"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/themeImageViewId"
        android:layout_width="352dp"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:background="#80e1d7bc" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="352dp"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:backgroundTint="@color/lake_primary_dark"
        android:clipChildren="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/emailLabelId"
                    style="@android:style/Widget.DeviceDefault.TextView.SpinnerItem"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center|start"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corners_template"
                    android:backgroundTint="#80E1D7BC"
                    android:text="@string/loginEmaiLlabel"
                    android:textAlignment="viewStart"
                    android:textDirection="ltr"
                    android:textIsSelectable="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/emailAddressInputId"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="3"
                    android:background="@drawable/rounded_corners_template"
                    android:backgroundTint="@color/lake_primary_light"
                    android:hint="@string/emailHint"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textAlignment="viewStart"
                    android:textDirection="ltr"
                    android:textIsSelectable="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/passwordLayoutId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/passwordLabelId"
                    style="@android:style/Widget.DeviceDefault.TextView.SpinnerItem"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center|start"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corners_template"
                    android:backgroundTint="#80E1D7BC"
                    android:text="@string/loginPasswordLabel"
                    android:textAlignment="viewStart"
                    android:textDirection="ltr"
                    android:textIsSelectable="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/passwordInputId"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="3"
                    android:background="@drawable/rounded_corners_template"
                    android:backgroundTint="@color/lake_primary_light"
                    android:hint="@string/passwordHint"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textAlignment="viewStart"
                    android:textDirection="ltr"
                    android:textIsSelectable="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loginButtonRowId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/loginButtonId"
                    android:layout_width="fill_parent"
                    android:layout_height="53dp"
                    android:layout_margin="30dp"
                    android:background="@drawable/rounded_corners_template"
                    android:text="@string/loginButtonText"
                    app:cornerRadius="5dp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>